force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/cdcpc__RD_Manufacturing_Range_Values__c.object-meta.xml
<CustomObject>
    <label>RD Manufacturing Range Values</label>
    <nameField>
        <displayFormat>MfgRngVal-{0000}</displayFormat>
        <label>RD Manufacturing Range Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RD Manufacturing Range Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>