force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/fields/cdcpc__MinMfgRngAdder__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MinMfgRngAdder__c</fullName>
    <label>MinMfgRngAdder</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>