force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/fields/cdcpc__MinMfgRngMulti__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MinMfgRngMulti__c</fullName>
    <label>MinMfgRngMulti</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>