force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/fields/cdcpc__RGEMAXUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RGEMAXUL__c</fullName>
    <label>RGEMAXUL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>