force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/fields/cdcpc__RTPRS1LL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RTPRS1LL__c</fullName>
    <label>RTPRS1LL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>