force-app/main/default/objects/cdcpc__RD_Manufacturing_Range_Values__c/fields/cdcpc__RTPRS1UL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RTPRS1UL__c</fullName>
    <label>RTPRS1UL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>